[package]
name = "busymess"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "busy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["test", "toml"] }
liquid = "0.26"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { "version" = "1", features = ["full"] }
